src/objects/echosign_dev1__SIGN_Merge_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>echosign_dev1__Cached_Input_Type__c</fullName>
        <label>Cached Input Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you want this merge mapping to run by default for all agreements sent. You can override the default if you specify a different merge mapping to use with a specific agreement or agreement template.</description>
        <label>Default Merge Mapping?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Merge Mapping</label>
    <listViews>
        <fullName>echosign_dev1__All</fullName>
        <columns>NAME</columns>
        <columns>echosign_dev1__Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Merge Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>